<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22pt"
        android:text="@string/scameggTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="104dp"
        android:gravity="center"
        android:text="@string/loginBtnTxt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="383dp"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplay">

    </Button>

    <Button
        android:id="@+id/mainCreateAccountButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="104dp"
        android:gravity="center"
        android:text="@string/createAccountBtn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="383dp"
        app:layout_constraintTop_toBottomOf="@+id/mainLoginButton">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>